fix: arreglo enum y agrego jsonproperty